tests/NormalTests/paczka1/small_fuzzy/65468714.err
Error in line 3: pFbjj5mT A573 43,4
Error in line 1: A573 A147 12,8
